<resources>
    <string name="app_name">Courses</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="courses">Courses</string>
    <string name="search">Search</string>
</resources>