<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bido.courses.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.bido.courses.CoursesFragment"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.bido.courses.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />


    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bido.courses.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.bido.courses.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting" />
</navigation>